--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -23,3 +23,12 @@
     font-size: 20px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+#cart-count
+{
+    text-align: end;
+}
+#cart-count > a:hover
+{
+    color: wheat;
+    font-size: 20px;
+}
